--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
-    "nodemailer": "^6.9.13"
+    "nodemailer": "^6.9.13",
+    "stripe": "^15.7.0"
   },
   "description": ""
 }
