--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "http": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.2.4",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.13",
+    "socket.io": "^4.7.5",
     "stripe": "^15.7.0"
   },
   "description": ""
